<resources>
    <string name="app_name">Weather App</string>
    <string name="location">Location</string>
    <string name="updated_at">Updated at</string>
    <string name="content_description">Weather Image Info</string>
    <string name="weather_status">Clear Sky</string>
    <string name="temp">24°C</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_time">5:30am</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_time">5:30am</string>
    <string name="wind">Wind</string>
    <string name="wind_speed">100</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_size">300</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">90</string>
    <string name="info">Info</string>
    <string name="weather_info">weather</string>
    <string name="dummy_welcome">Search Weather Info from every City with this app!</string>
    <string name="splash_logo">Splash Logo</string>
</resources>